--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,73 @@
-name: Deploy principal-isi
+name: Deploy (principal-isi)
+
 on:
-  push: { branches: [ main ] }
+  push:
+    branches: [ "main" ]
   workflow_dispatch:
-concurrency: { group: principal-isi-deploy, cancel-in-progress: false }
+
+concurrency:
+  group: deploy-principal-isi
+  cancel-in-progress: true
+
 jobs:
   deploy:
     runs-on: [ self-hosted, linux, principal-isi ]
+    timeout-minutes: 20
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Sync a /srv/pln (solo copia)
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Prechequeos de estructura del proyecto
+        shell: bash
         run: |
-          rsync -a --delete ./ /srv/pln/
-          chown -R gh-principal-isi:gh-principal-isi /srv/pln
-      - name: Build y Up solo principal-isi
-        working-directory: /srv/pln
+          set -euo pipefail
+          test -f app/main.py          || { echo "Falta app/main.py"; exit 1; }
+          test -f app/requirements.txt || { echo "Falta app/requirements.txt"; exit 1; }
+          test -f app/Dockerfile       || { echo "Falta app/Dockerfile"; exit 1; }
+          # Prohíbe decorador y def en la misma línea (causa SyntaxError)
+          ! grep -P '@app\.\w+\(.*\)\s+def\s' app/main.py || { echo "No uses decorador y def en la misma línea"; exit 1; }
+
+      - name: Info del runner (debug)
+        shell: bash
         run: |
+          set -euo pipefail
+          whoami
+          id
+          docker --version
+          # Confirma que el runner puede escribir en destino
+          test -d /srv/pln/principal-isi || mkdir -p /srv/pln/principal-isi
+          test -d /srv/pln/principal-isi/app || mkdir -p /srv/pln/principal-isi/app
+          test -w /srv/pln/principal-isi/app || { echo "Destino no escribible: /srv/pln/principal-isi/app"; exit 1; }
+
+      - name: Sincronizar código a la VM
+        shell: bash
+        run: |
+          set -euo pipefail
+          rsync -av --delete ./app/ /srv/pln/principal-isi/app/
+
+      - name: Build + Up (solo principal-isi)
+        shell: bash
+        run: |
+          set -euo pipefail
+          cd /srv/pln
           docker compose build principal-isi
           docker compose up -d principal-isi
-      - name: Smoke test
+          docker compose ps principal-isi
+          docker ps --format 'table {{.Names}}\t{{.Status}}\t{{.Ports}}' | grep principal-isi || true
+
+      - name: Esperar /health hasta 60s
+        shell: bash
         run: |
-          for i in {1..20}; do
-            curl -fsS http://localhost:9090/ && exit 0
-            echo "intentando..."; sleep 2
+          set -euo pipefail
+          WG_HOST="10.5.20.50"
+          PORT=9090
+          for i in {1..30}; do
+            if curl -fsS "http://${WG_HOST}:${PORT}/health" | grep -q '"status":"ok"'; then
+              echo "OK"; exit 0
+            fi
+            echo "Intento $i: esperando principal-isi..."
+            sleep 2
           done
-          exit 1
+          echo "No respondió /health, logs del servicio:"
+          cd /srv/pln && docker compose logs --tail
