--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: Deploy (principal-isi)
 
 on:
   push:
-    branches: [ "main" ]   # Si main está protegido, se dispara después del merge
-  workflow_dispatch:        # Permite ejecutar manualmente desde Actions
+    branches: [ "main" ]
+  workflow_dispatch:
 
 concurrency:
   group: deploy-principal-isi
@@ -18,62 +18,64 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Prechequeos de estructura del proyecto
+      # Verifica que el runner pueda hablar con Docker (daemon)
+      - name: Chequeo acceso a Docker
         shell: bash
         run: |
           set -euo pipefail
-          test -f app/main.py            || { echo "Falta app/main.py"; exit 1; }
-          test -f app/requirements.txt   || { echo "Falta app/requirements.txt"; exit 1; }
-          test -f app/Dockerfile         || { echo "Falta app/Dockerfile"; exit 1; }
-          # Prohíbe decorador y def en la misma línea (causa SyntaxError)
-          ! grep -P '@app\.\w+\(.*\)\s+def\s' app/main.py || { echo "6O uses decorador y def en la misma línea"; exit 1; }
+          docker info >/dev/null
 
-      - name: Info del runner (debug)
+      # Prechequeos: estructura y archivos mínimos en el repo
+      - name: Prechequeos en repo
         shell: bash
         run: |
           set -euo pipefail
-          whoami
-          id
-          docker --version
-          # Confirma que el runner puede escribir en destino
-          test -d /srv/pln/principal-isi || mkdir -p /srv/pln/equipos/principal-isi
-          test -d /srv/pln/principal-isi/app || mkdir -p /srv/pln/equipos/principal-isi/app
-          test -w /srv/pln/principal-isi/app || { echo "Destino no escribible: /srv/pln/equipos/principal-isi/app"; exit 1; }
+          test -f principal-isi/app/Dockerfile       || { echo "Falta principal-isi/app/Dockerfile"; exit 1; }
+          test -f principal-isi/app/requirements.txt || { echo "Falta principal-isi/app/requirements.txt"; exit 1; }
+          test -f principal-isi/app/main.py          || { echo "Falta principal-isi/app/main.py"; exit 1; }
 
-      - name: Sincronizar código a la VM
+      # Sincroniza TODO el repo del principal a /srv/pln/principal-isi/
+      # (así siempre existe /srv/pln/principal-isi/app como context de build)
+      - name: Sincronizar código del principal
         shell: bash
         run: |
           set -euo pipefail
-          rsync -av --delete ./app/ /srv/pln/principal-isi/
-          
+          mkdir -p /srv/pln/principal-isi
+          rsync -av --delete ./ /srv/pln/principal-isi/
+          # Comprobación dura antes de build
+          test -d /srv/pln/principal-isi/principal-isi/app || { echo "No existe /srv/pln/principal-isi/principal-isi/app tras sync"; exit 1; }
+          ls -lah /srv/pln/principal-isi/principal-isi/app
 
+      # Build + Up SOLO del servicio principal-isi, desde /srv/pln
       - name: Build + Up (solo principal-isi)
         shell: bash
         run: |
           set -euo pipefail
           cd /srv/pln
+          # Muestra la sección efectiva del servicio (depura rutas)
+          docker compose config | sed -n '/principal-isi:/,/^[^ ]/p'
           docker compose build principal-isi
           docker compose up -d principal-isi
           docker compose ps principal-isi
-          docker ps --format 'table {{.6ames}}\t{{.Status}}\t{{.Ports}}' | grep principal-isi || true
+          docker ps --format 'table {{.Names}}\t{{.Status}}\t{{.Ports}}' | grep principal-isi || true
 
-      - name: Esperar /health hasta 60s
+      # Smoke test: /health (si aún no lo tienes, cambia a "/")
+      - name: Smoke test principal-isi
         shell: bash
         run: |
           set -euo pipefail
-          WG_HOST="10.5.20.50"
-          PORT=9090   # ej. 9090
-          for i in {1..30}; do
-            if curl -fsS "http://${WG_HOST}:${PORT}/health" | grep -q '"status":"ok"'; then
-              echo "OK"; exit 0
+          URL="http://localhost:9090/health"
+          for i in {1..20}; do
+            if curl -fsS "$URL" >/dev/null; then
+              echo "OK principal-isi"; exit 0
             fi
+            echo "Intento $i: esperando principal-isi..."
             sleep 2
           done
-          echo "6o respondió /health, logs del servicio:"
-          cd /srv/pln && docker compose logs --tail=200 principal-isi
+          echo "No respondió $URL, logs:"
+          cd /srv/pln && docker compose logs --tail=200 principal-isi || true
           exit 1
 
-      # Si el job falla en cualquier paso, muestra logs para depurar
       - name: Logs en fallo (always)
         if: ${{ failure() }}
         shell: bash
