--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,12 +1,10 @@
 fastapi==0.115.*
 uvicorn[standard]==0.30.*
 httpx==0.27.*
-jinja2==3.1.*
-
-# nuevas para auth/web/DB
 sqlalchemy==2.0.34
 psycopg2-binary==2.9.9
 python-jose==3.3.0
 passlib[bcrypt]==1.7.4
 jinja2==3.1.4
 python-multipart==0.0.9
+email-validator==2.1.0.post1
