--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,14 +1,23 @@
 FROM python:3.11-slim
 
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+# Evita bytecode y buffers en logs
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
+# Dependencias del sistema mínimas (psycopg2)
+RUN apt-get update -y && apt-get install -y --no-install-recommends \
+      build-essential libpq-dev curl ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
+
+# Instala Python deps
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copia el código
 COPY . .
 
+# Expone y lanza
 EXPOSE 8000
 CMD ["uvicorn","main:app","--host","0.0.0.0","--port","8000"]
