--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.115.*
-uvicorn[standard]==0.30.*
-httpx==0.27.*
+fastapi==0.115.2
+uvicorn==0.30.6
+httpx==0.27.2
 sqlalchemy==2.0.34
 psycopg2-binary==2.9.9
 python-jose==3.3.0
