Add psycopg2-binary to requirements
Added psycopg2-binary requirement for PostgreSQL connection.

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -6,3 +6,6 @@ python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 pydantic>=2.6.0
 pydantic-settings>=2.2.1
+
+# Driver de PostgreSQL (NECESARIO para que conecte a postgres:)
+psycopg2-binary==2.9.9
