--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -6,6 +6,5 @@ python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 pydantic>=2.6.0
 pydantic-settings>=2.2.1
-
-# Driver de PostgreSQL (NECESARIO para que conecte a postgres:)
+email-validator>=2.1.0.post1
 psycopg2-binary==2.9.9
